Added more resources; began menu

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 		<link href="css/index.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
-	
+		<div class="wrapper">
+			<div class="menu">
+				<table>
+					<tr>
+						<td>Home</td>
+						<td>Features</td>
+						<td>Media</td>
+						<td>Download</td>
+						<td>About</td>
+					</tr>
+				</table>
+			</div>
+		</div>
 	</body>
-
-
-
-
-
 </html>
