--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 	<head>
 		<title>Neurotec -- Home Page</title>
 		<link href="css/index.css" rel="stylesheet" type="text/css"/>
+		<link href="css/common.css" rel="stylesheet" type="text/css"/>	
 	</head>
 	<body>
 		<div class="wrapper">
-			<div class="menu">
-				<table>
-					<tr>
-						<td>Home</td>
-						<td>Features</td>
-						<td>Media</td>
-						<td>Download</td>
-						<td>About</td>
-					</tr>
-				</table>
+			<div class="menu_cont">
+				<div class="menu">
+					<img class="menu_pic_l" src="images/logo.png" alt="neuro_logo"/>
+					<!-- <img class="menu_pic_r" src="images/neuroposter.jpg" alt="neuro_logo2"/>-->
+					<table class="menu_tab">
+						<tr>
+							<td>Home</td>
+							<td>Features</td>
+							<td>Media</td>
+							<td>Download</td>
+							<td>About</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</body>
