--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 		<div class="wrapper">
 			<div class="menu_cont">
 				<div class="menu">
-					<img class="menu_pic_l" src="images/logo.png" alt="neuro_logo"/>
-					<!-- <img class="menu_pic_r" src="images/neuroposter.jpg" alt="neuro_logo2"/>-->
-					<table class="menu_tab">
-						<tr>
-							<td>Home</td>
-							<td>Features</td>
-							<td>Media</td>
-							<td>Download</td>
-							<td>About</td>
-						</tr>
-					</table>
+					<div class="img_cont">
+						<img class="menu_pic_l" src="images/logo.png" alt="neuro_logo"/>
+						<!-- <img class="menu_pic_r" src="images/neuroposter.jpg" alt="neuro_logo2"/>-->
+					</div>
+					<div class="menu_tab_cont">
+						<table class="menu_tab">
+							<tr>
+								<td>Home</td>
+								<td>Features</td>
+								<td>Media</td>
+								<td>Download</td>
+								<td>About</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
