--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 					</div>
 				</div>
 			</div>
+			<div class="body_div">
+				<h2 class="b_header">WELCOME TO NEUROTEC!</h2>
+				<video></video>
+			</div>
 		</div>
 	</body>
 </html>
