--- a/index.html
+++ b/index.html
@@ -19,15 +19,22 @@
 								<td>Features</td>
 								<td>Media</td>
 								<td>Download</td>
-								<td>About</td>
+								<td>About Us</td>
 							</tr>
 						</table>
 					</div>
 				</div>
 			</div>
-			<div class="body_div">
-				<h2 class="b_header">WELCOME TO NEUROTEC!</h2>
-				<video></video>
+			<div class="body_div_cont">
+				<div class="tbody_div">
+					<h2 class="b_header">WELCOME TO NEUROTEC!</h2>
+					<p class="b_headerdesc">An All-Encompassing Military Vehicular Mod</p>
+					<img class="nuke1" src="images/usaf_crater.jpg" alt="nuke"/>
+					<p class="desc">Neurotec is a modification for <a href="http://www.garrysmod.com">Garry's Mod</a>, a Sandbox-Physics game available <a href="http://store.steampowered.com/app/4000/"> on the Steam Store</a>.</p>
+					<p class="desc">Currently, it reigns as supreme for being one of the most complete military mods, with a mature codebase and extensive and meticulous work throughout the project.</p>
+					<p class="desc">Unlike most CoderHire.com shiznit, this mod is absolutely free, and always wil be (but we'd love to take your moeny for some beer -- click <a href="donate.com">Here</a> to give a little something).</p>
+					
+				</div>
 			</div>
 		</div>
 	</body>
