Finished "Alpha" of front page
Added desc and touched up asthetics; adjusted images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<p class="desc">Neurotec is a modification for <a href="http://www.garrysmod.com">Garry's Mod</a>, a Sandbox-Physics game available <a href="http://store.steampowered.com/app/4000/"> on the Steam Store</a>.</p>
 					<p class="desc">Currently, it reigns as supreme for being one of the most complete military mods, with a mature codebase and extensive and meticulous work throughout the project.</p>
 					<p class="desc">Unlike most CoderHire.com shiznit, this mod is absolutely free, and always wil be (but we'd love to take your moeny for some beer -- click <a href="donate.com">Here</a> to give a little something).</p>
-					
+					<p class="desc">And just in case you wanted to download it, please <a href="download.html">Click Here</a> to be taken to the download page.</p>
 				</div>
 			</div>
 		</div>
