--- a/features.html
+++ b/features.html
@@ -29,7 +29,7 @@
 				<div class="tbody_div">
 					<h2 class="b_header">Features</h2>
 					<p class="b_headerdesc">This Is What You're Getting</p>
-					<p class="desc" style="font-weight:strong;">FEATURES:</p>
+					<p class="desc" style="font-weight:strong;">Amongst other things, here are some of the things that Neurotec Offers:</p>
 						<ul>
 							<li>Hundreds of Vehicles of all time periods and shapes, ranging from the tiny cavaliers of WWI to modern tanks that wouldn't hesitate to break your wall down and blow up your house.</li>
 							<li>Crews: You have a tank crew, and if they're killed, your tank won't function correctly!</li>
