--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>	
 	<head>
 		<title>Neurotec -- Home Page</title>
-		<link href="css/index.css" rel="stylesheet" type="text/css"/>
-		<link href="css/common.css" rel="stylesheet" type="text/css"/>	
+		<link href="css/index2.css" rel="stylesheet" type="text/css"/>
+		<link href="css/common2.css" rel="stylesheet" type="text/css"/>	
 	</head>
 	<body>
 		<div class="wrapper">
@@ -27,8 +27,10 @@
 			</div>
 			<div class="body_div_cont">
 				<div class="tbody_div">
-					<h2 class="b_header">WELCOME TO NEUROTEC!</h2>
-					<p class="b_headerdesc">An All-Encompassing Military Vehicular Mod</p>
+					<div class="wel_head">
+						<h2 class="b_header">WELCOME TO NEUROTEC!</h2>
+						<p class="b_headerdesc">An All-Encompassing Military Vehicular Mod</p>
+					</div>
 					<img class="nuke1" src="images/usaf_crater.jpg" alt="nuke"/>
 					<p class="desc">Neurotec is a modification for <a href="http://www.garrysmod.com">Garry's Mod</a>, a Sandbox-Physics game available <a href="http://store.steampowered.com/app/4000/"> on the Steam Store</a>.</p>
 					<p class="desc">Currently, it reigns as supreme for being one of the most complete military mods, with a mature codebase and extensive and meticulous work throughout the project.</p>
