--- a/index3.html
+++ b/index3.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>	
 	<head>
 		<title>Neurotec -- Home Page</title>
-		<link href="css/index2.css" rel="stylesheet" type="text/css"/>
-		<link href="css/common2.css" rel="stylesheet" type="text/css"/>	
+		<link href="css/index.css" rel="stylesheet" type="text/css"/>
+		<link href="css/common.css" rel="stylesheet" type="text/css"/>	
 	</head>
 	<body>
 		<div class="wrapper">
