Slight Main Menu Change
Menu is bottom tab; I'm back (unless APUSH shits work all over me)!

--- a/index2.html
+++ b/index2.html
@@ -11,26 +11,7 @@
 						<img class="menu_pic_l" src="images/logo.png" alt="neuro_logo"/>
 						<!-- <img class="menu_pic_r" src="images/neuroposter.jpg" alt="neuro_logo2"/>-->
 					</div>
-					<div class="menu_tab_cont">
-						<table class="menu_tab">
-							<tr>
-								<td>Home</td>
-							</tr>
-							<tr>
-								<td>Features</td>
-							</tr>
-							<tr>
-								<td>Media</td>
-							</tr>
-							<tr>							
-								<td>Download</td>
-							</tr>
-							<tr>							
-								<td>About</td>
-							</tr>
-						</table>
-					</div>
-			</div>
+
 			<div class="body_div_cont">
 				<div class="tbody_div">
 					<!-- <div class="wel_head">
@@ -45,7 +26,20 @@
 				</div>-->
 			</div>
 			<div class="footer">
-				
+					<div class="menu_tab_cont">
+						<center><img class="menu_pic_l" src="images/logo.png" alt="neuro_logo"/></center>
+						<table class="menu_tab">
+							<tr>
+								<td>Home</td>
+								<td>Features</td>
+								<td>Media</td>		
+								<td>Download</td>			
+								<td>About</td>
+							</tr>
+						</table>
+
+					</div>
+			</div>
 			</div>
 		</div>
 	</body>
